--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <a href= "https://www.instagram.com/19.__kktp" target="_blank">
                 <img src="img/1.jpeg" alt="kantapon sever">
             </a>
-            <h2>kantapon sever</h2>
+            <h2>kantapon </h2>
             <p> น้ำท่อมไม่ต้อง เพราะแค่มองตาเธอก็ลอยแล้ว </p>
         </div>
         <div class="card">
@@ -117,9 +117,17 @@
             <a href="https://www.instagram.com/nomorebets._" target="_blank">
                 <img src="img/4.jpg" alt="my gang">
             </a>
-            <h2>little</h2>
+            <h2>Little</h2>
             <p>diazepam 10 mg ท่อม</p>
         </div>
+        <div class="card">
+            <a href= "https://www.instagram.com/x3arth_24/" target="_blank">
+                <img src="img/5.png" alt="Earth">
+            </a>
+            <h2>Earth</h2>
+            <p> pcxขาวอ่ะ ที่เดิมๆอ่ะ</p>
+        </div>
+
                  </div>
 
     <footer>
