--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="card">
             <a href= "https://www.instagram.com/x3arth_24/" target="_blank">
-                <img src="img/5.png" alt="Earth">
+                <img src="img/5.jpg" alt="Earth">
             </a>
             <h2>Earth</h2>
             <p> pcxขาวอ่ะ ที่เดิมๆอ่ะ</p>
