--- a/gang.html
+++ b/gang.html
@@ -125,6 +125,9 @@
         <img src="img2/5.jpg" alt="Gang Image">
     </div>
     <div class="container" id="about">
+        <img src="img2/7.jpg" alt="Gang Image">
+    </div>
+    <div class="container" id="about">
         <img src="img2/6.png" alt="Gang Image">
         <p>กลุ่มกุอย่าเสือกเยอะไอ่สัสเเดกเเต่ท่อมเเต่ยา!</p>
     </div>
