--- a/gang.html
+++ b/gang.html
@@ -125,7 +125,7 @@
         <img src="img2/5.jpg" alt="Gang Image">
     </div>
     <div class="container" id="about">
-        <img src="img2/7.jpg" alt="Gang Image">
+        <img src="img2/7.jpeg" alt="Gang Image">
     </div>
     <div class="container" id="about">
         <img src="img2/6.png" alt="Gang Image">
